<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.timeout</groupId>
  <artifactId>Libs</artifactId>
  <version>1.5.3_1152-TEST</version>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      
      <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
      	<artifactId>maven-shade-plugin</artifactId>
      	<version>3.2.0</version>
      	<executions>
		  <execution>
		  	<phase>package</phase>
		  	<goals>
		  		<goal>shade</goal>
		  	</goals>
          </execution>
      	</executions>
      	<configuration>
      		<finalName>${project.artifactId}</finalName>
      	</configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <show>private</show>
          <nohelp>true</nohelp>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <stylesheetfile>${basedir}/doc/stylesheet.css</stylesheetfile>
          <show>public</show>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
  
  <repositories>    
     <repository>
     	<id>dmulloy2-repo</id>
     	<url>http://repo.dmulloy2.net/nexus/repository/public/</url>
     </repository>
     
     <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
  </repositories>
  
  <dependencies> 	
	<dependency>
  		<groupId>org.spigotmc</groupId>
  		<artifactId>spigot</artifactId>
  		<version>1.15.2-R0.1-SNAPSHOT</version>
  		<scope>provided</scope>
  	</dependency>
  	
  	<dependency>
        <groupId>io.github.java-diff-utils</groupId>
    	<artifactId>java-diff-utils</artifactId>
    	<version>4.5</version>
	</dependency>
	
	<dependency>
    	<groupId>net.jafama</groupId>
    	<artifactId>jafama</artifactId>
    	<version>2.3.1</version>
	</dependency>
	
  </dependencies>
</project>